dealing with width issues on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,6 @@ body {
 .container {
     margin: 0 auto;
     padding: 16px;
-    width: 100%;
     overflow: hidden;
 }
 
@@ -50,7 +49,7 @@ body {
 
 .title-container h1 {
     font-family: 'Sfizia Italic';
-    font-size: 6.56em;
+    font-size: 26vw;
     line-height: 147px;
     margin-top: -20px;
     margin-bottom: 0;
@@ -95,14 +94,10 @@ p {
 }
 
 .svg-heart {
-    min-width: 116px;
-    height: auto;
     margin-top: -82px;
 }
 
 .svg-wavy {
-    min-width: 248px;
-    height: auto;
     margin-top: -50px;
 }
 
